url 변경 및 모델 추가